Ajustes de media e objetos

--- a/Antenna_tracker/platformio.ini
+++ b/Antenna_tracker/platformio.ini
@@ -13,15 +13,15 @@ platform=atmelavr
 board=nanoatmega328
 framework=arduino
 
-[env:pro16MHzatmega168]
-platform=atmelavr
-board=pro16MHzatmega168
-framework=arduino
+;[env:pro16MHzatmega168]
+;platform=atmelavr
+;board=pro16MHzatmega168
+;framework=arduino
 
-[env:uno]
-platform=atmelavr
-board=uno
-framework=arduino
+;[env:uno]
+;platform=atmelavr
+;board=uno
+;framework=arduino
 
 [platformio]
 src_dir=Antenna_tracker
